--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,58 @@
     transform: rotate(360deg);
   }
 }
+/* Start Here */
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.navigation {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  height: 100%;
+  background-color: #f1f1f1;
+  overflow: auto;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+  background-color: #555;
+  color: white;
+}
+
+li:last-child {
+  border-bottom: none;
+}
+
+.Root {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+}
+.Main {
+  display: flex;
+  flex-direction: row;
+}
+
+.newNote {
+  display: flex;
+  justify-content: center;
+  font-size: xx-large;
+}
+.newNote a {
+  text-decoration: none;
+  border: 4px dashed black;
+  border-radius: 8px;
+  height: 20px;
+  margin: 10px;
+  width: 20px;
+}
