--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ ul {
 .navigation {
   display: flex;
   flex-direction: column;
-  width: 25%;
+  width: 30%;
   height: 100%;
   background-color: #f1f1f1;
   overflow: auto;
@@ -67,21 +67,43 @@ li:last-child {
   flex-direction: row;
   height: 100vh;
 }
+.Main div{
+  width: 100%;
+}
 .Main {
   display: flex;
+  padding: 30px;
+  width: 100%;
   flex-direction: row;
+
 }
 
 .newNote {
   display: flex;
   justify-content: center;
-  font-size: xx-large;
 }
 .newNote a {
   text-decoration: none;
-  border: 4px dashed black;
-  border-radius: 8px;
-  height: 20px;
-  margin: 10px;
-  width: 20px;
+  font-size: 48pt;
+  font-weight: bold;
+  color: #000;
+}
+textarea {
+  vertical-align: top;
+  height: 400px;
+  width: 100%;
+}
+
+input,
+textarea {
+  box-sizing: border-box;
+  border: 1px solid #999;
+}
+form {
+  width: 100%
+}
+label {
+  display: inline-block;
+  width: 90px;
+  text-align: right;
 }
